frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: knot
spec:
  selector:
    app: knote
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
